--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                     Witness the seismic shift. A world forged in steel and sweat gives way to one illuminated by the glow of screens. This is the genesis of the Empire of Likes, born from the twilight of one age and the dawn of another, where the clamor of factories fades into the whisper of the scroll.
                 </p>
 
-                <div class="chapter animate-on-scroll" data-animation="zoomIn" data-delay="200">
-                    <h3>Chapter 0: Twilight of the Producers</h3>
+                <div class="stage-part animate-on-scroll" data-animation="zoomIn" data-delay="200">
+                    <h3>Part 0: Twilight of the Producers</h3>
                     <p>Once, the rhythm of a nation was the roar of its foundries, the sweat of its makers. Now, a new pulse quickens – the flicker of ring lights, the dance of curated personas. We invite you to slide between two eras, to feel the ground shift beneath your feet.</p>
                     <div class="temporal-loom-container">
                         <div class="temporal-scene" id="scene-steel-mill">
@@ -75,8 +75,8 @@
                     </blockquote>
                 </div>
 
-                <div class="chapter animate-on-scroll" data-animation="slideInLeft" data-delay="300">
-                    <h3>Chapter 1: Group-Chat Apocalypse</h3>
+                <div class="stage-part animate-on-scroll" data-animation="slideInLeft" data-delay="300">
+                    <h3>Part 1: Group-Chat Apocalypse</h3>
                     <p>The old gods of the market tremble. In Brooklyn apartments, illuminated by the cold light of stock tickers bleeding red, a new kind of augury unfolds – not in the entrails of beasts, but in the endless scroll of group chats. Here, wit, despair, and the perfectly timed GIF become the currency of a dawning unease.</p>
                     <img src="img/act1_ch1_group_chat_cracked.jpg" alt="Group chat on a cracked screen" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act1_ch1_group_chat_cracked.jpg'; this.src='https://placehold.co/700x300/1a1a1a/E0E0FF?text=Error:+act1_ch1_group_chat_cracked.jpg+not+found'; this.onerror=null;">
                     <div class="interactive-placeholder" id="group-chat-interactive">
@@ -87,8 +87,8 @@
                     <p><em>"The S&P broke support at 5100 while Kunal broke the last taboo of optimism. He called America Rwanda with Wi-Fi, and the insult stung not because it was cruel but because it felt prematurely accurate."</em> – An excerpt from the digital ether.</p>
                 </div>
 
-                <div class="chapter animate-on-scroll" data-animation="slideInRight" data-delay="400">
-                    <h3>Chapter 2: Snapchatting the Colosseum</h3>
+                <div class="stage-part animate-on-scroll" data-animation="slideInRight" data-delay="400">
+                    <h3>Part 2: Snapchatting the Colosseum</h3>
                     <p>Is this new? Or is history merely an infinite scroll itself, a feed of recurring human folly dressed in different digital robes? We time-warp to A.D. 80. The roar of the Colosseum. The glint of a gladiator's shield – now, imagine it sponsored by "Olympus Olive Oil." The grain dole, a precursor to your DoorDash credit. The spectacle, then as now, a potent sedative.</p>
                      <div class="interactive-placeholder" id="colosseum-interactive">
                         <h4>Interactive: Colosseum <span class="highlight-secondary">Filters</span></h4>
@@ -116,8 +116,8 @@
                     Every empire needs an engine. Ours is not built of iron and steam, but of algorithms and eyeballs. Here, we dissect the invisible architecture of the attention economy – the ingenious designs that captivate our minds and the subtle shifts that turned human focus into the world's most traded commodity.
                 </p>
 
-                <div class="chapter animate-on-scroll" data-animation="fadeInUp" data-delay="200">
-                    <h3>Chapter 3: Invention of the Infinite Scroll</h3>
+                <div class="stage-part animate-on-scroll" data-animation="fadeInUp" data-delay="200">
+                    <h3>Part 3: Invention of the Infinite Scroll</h3>
                     <p>It began innocuously enough. Aza Raskin, a young interface designer, sought to remove a click, to make the digital river flow a little smoother. In 2006, the infinite scroll was born. Little did we know, we were forging the digital equivalent of the Vegas slot machine – a perfectly calibrated dopamine drip, designed never to end. Can you escape its pull?</p>
                     <img src="img/act2_ch3_scroll_slot_machine.jpg" alt="Slot machine morphing into infinite scroll" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act2_ch3_scroll_slot_machine.jpg'; this.src='https://placehold.co/700x350/1c1c3a/ff0000?text=Error:+act2_ch3_scroll_slot_machine.jpg+NOT+FOUND'; this.onerror=null;">
                     <aside class="infobox animate-on-scroll" data-animation="fadeIn" data-delay="150">
@@ -140,8 +140,8 @@
                     </div>
                 </div>
 
-                <div class="chapter animate-on-scroll" data-animation="fadeInUp" data-delay="300">
-                    <h3>Chapter 4: When Talent Quit, Influence Won</h3>
+                <div class="stage-part animate-on-scroll" data-animation="fadeInUp" data-delay="300">
+                    <h3>Part 4: When Talent Quit, Influence Won</h3>
                     <p>There was a time when fame was tethered, however loosely, to demonstrable skill. Sinatra's voice, DiMaggio's swing. But the engine of attention grinds differently. It rewards not necessarily talent, but the ability to *capture* talent's shimmering byproduct: eyeballs. Explore the data: when did "scandal" searches eclipse "skill"? Why does a 13-year-old Roblox streamer earn more than 95% of working musicians?</p>
                     <div class="interactive-placeholder" id="fame-trends-chart">
                         <h4>Data Viz: Talent vs. <span class="highlight-secondary">Influence</span></h4>
@@ -160,8 +160,8 @@
                     Every empire casts long shadows. Beneath the glittering surface of the attention economy lie the forgotten debts, the invisible wars, and the quiet erosion of shared purpose. Here, we unearth the ghosts in the machine – the societal costs and the human toll of a world perpetually distracted, perpetually indebted, perpetually at war with shadows.
                 </p>
 
-                <div class="chapter animate-on-scroll" data-animation="slideInUp" data-delay="200">
-                    <h3>Chapter 5: Our Last Great Project & The Great Forgetting</h3>
+                <div class="stage-part animate-on-scroll" data-animation="slideInUp" data-delay="200">
+                    <h3>Part 5: Our Last Great Project & The Great Forgetting</h3>
                     <p>Remember Rosie the Riveter? A symbol of unified purpose, of a nation building, creating, *producing*. That was World War II, perhaps America's last truly great, collective project. What followed was an afterglow, then the slow, almost imperceptible decoupling of wages from productivity, of shared prosperity from national output. The ring-light Rosie of today rivets attention, not bombers. What was lost in that transition?</p>
                      <div class="interactive-placeholder" id="rosie-morph-interactive">
                         <h4>Interactive: Rosie / <span class="highlight-secondary">Ring-Light</span> Rosie</h4>
@@ -174,8 +174,8 @@
                     </div>
                 </div>
 
-                <div class="chapter animate-on-scroll" data-animation="slideInUp" data-delay="300">
-                    <h3>Chapter 6: Credit Cards, Forever Wars, & Invisible Ink</h3>
+                <div class="stage-part animate-on-scroll" data-animation="slideInUp" data-delay="300">
+                    <h3>Part 6: Credit Cards, Forever Wars, & Invisible Ink</h3>
                     <p>An empire that no longer primarily *makes* things must find other ways to fuel its appetites. Enter the era of easy credit – BankAmericard becoming Visa, a world mortgaged on future earnings. Simultaneously, the nature of conflict shifted. "Cost-plus" contracts turned defense into a perpetual R&D arm of the economy, funding wars fought in shadows, their true costs written in invisible ink on the national ledger. How does debt, personal and national, intertwine with a culture of disposable attention?</p>
                     <img src="img/act3_ch6_card_drone_morph.jpg" alt="Credit card morphing into military drone" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act3_ch6_card_drone_morph.jpg'; this.src='https://placehold.co/700x300/1c1c3a/ff0000?text=Error:+act3_ch6_card_drone_morph.jpg+NOT+FOUND'; this.onerror=null;">
                     <div class="interactive-placeholder" id="debt-gdp-chart">
@@ -185,8 +185,8 @@
                     </div>
                 </div>
                 
-                <div class="chapter animate-on-scroll" data-animation="fadeIn" data-delay="400">
-                    <h3>Chapter 7: Who Gets Crushed First (The Unseen Toll)</h3>
+                <div class="stage-part animate-on-scroll" data-animation="fadeIn" data-delay="400">
+                    <h3>Part 7: Who Gets Crushed First (The Unseen Toll)</h3>
                     <p>The circuses of the attention empire aren't free. Someone always pays. The Rust Belt hollowed out, subprime mortgages preying on dreams, algorithmic bias invisibly shaping destinies. Consider the data: teens of color often log significantly more screen hours than their wealthier white peers. Is this a choice, or a consequence of a system that offers distraction as a primary commodity, especially to those with fewer alternatives? This is the moral reckoning: who bears the hidden weight of our digital Colosseum?</p>
                     <img src="img/act5_ch9_factory_smartphone_split.jpg" alt="Decaying factory vs glowing smartphone" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act5_ch9_factory_smartphone_split.jpg'; this.src='https://placehold.co/700x400/1c1c3a/ff0000?text=Error:+act5_ch9_factory_smartphone_split.jpg+NOT+FOUND'; this.onerror=null;">
                 </div>
@@ -194,20 +194,21 @@
         </section>
         
         <section id="stage4" class="content-section">
-             <div class="section-background-fx" data-bg-type="kardashian-gold"></div> <div class="container">
+             <div class="section-background-fx" data-bg-type="kardashian-gold"></div>
+            <div class="container">
                 <h2 class="section-title animate-on-scroll" data-animation="fadeInUp">Stage 4: Zenith of the <span class="highlight-text">Spectacle</span></h2>
                  <p class="stage-intro animate-on-scroll" data-animation="fadeInUp" data-delay="100">
                     Welcome to the Imperial Court of Clicks. Here, attention is not just currency; it's the crown itself. Witness the apotheosis of influence, where reality TV grammar rewrites political discourse, and personal brands become global empires built on the ephemeral foundation of likes, shares, and viral moments. This is the spectacle in its most potent, world-shaping form.
                 </p>
 
-                <div class="chapter animate-on-scroll" data-animation="zoomIn" data-delay="200">
-                    <h3>Chapter 8: 2007: The Sensation That Built an Empire</h3>
+                <div class="stage-part animate-on-scroll" data-animation="zoomIn" data-delay="200">
+                    <h3>Part 8: 2007: The Sensation That Built an Empire</h3>
                     <p>A single tape. A calculated leak, or a serendipitous scandal? Regardless, it became the spark. Follow the trajectory: from whispered notoriety to an E! pilot, then a multi-billion-dollar branding dynasty. This is attention arbitrage perfected – the art of converting raw, often scandalous, human focus into enduring commercial power. How many clicks to build an empire?</p>
                     <img src="img/act4_ch7_statue_selfie.jpg" alt="Classical statue taking a selfie" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act4_ch7_statue_selfie.jpg'; this.src='https://placehold.co/600x400/1c1c3a/ff0000?text=Error:+act4_ch7_statue_selfie.jpg+NOT+FOUND'; this.onerror=null;">
                 </div>
 
-                <div class="chapter animate-on-scroll" data-animation="zoomIn" data-delay="300">
-                    <h3>Chapter 9: From Reality TV to Reality Itself</h3>
+                <div class="stage-part animate-on-scroll" data-animation="zoomIn" data-delay="300">
+                    <h3>Part 9: From Reality TV to Reality Itself</h3>
                     <p>The narrative structures of reality television – the manufactured cliff-hangers, the carefully constructed villain edits, the tearful redemption arcs – didn't stay confined to the screen. They bled into news cycles, into political campaigns, into the very way we perceive and construct our shared "reality." Debate nights become pay-per-view brawls. Policy is reduced to trending hashtags. When the grammar of spectacle becomes the language of power, what is left of substance?</p>
                 </div>
             </div>
@@ -221,14 +222,14 @@
                     The Empire of Likes stands vast, shimmering, and perhaps, teetering. Can this colossal engine of distraction sustain itself? Or are we at a precipice, a moment of reckoning where the very tools of our enchantment might become the instruments of our awakening? This is the present tense – a test of will, a search for meaning beyond the screen.
                 </p>
 
-                <div class="chapter animate-on-scroll" data-animation="slideInLeft" data-delay="200">
-                    <h3>Chapter 10: The Great Re-Industrialization Mirage?</h3>
+                <div class="stage-part animate-on-scroll" data-animation="slideInLeft" data-delay="200">
+                    <h3>Part 10: The Great Re-Industrialization Mirage?</h3>
                     <p>Whispers of a return. The CHIPS Act. Green steel. Micro-factories. A yearning for the tangible, for a future built again with hands and ingenuity. But is it a genuine renaissance, or a nostalgic mirage in the digital desert? The resistance is formidable: the siren call of cheaper production elsewhere, the NIMBYism that blocks new forges, the short political cycles that favor quick likes over long-term investment. Can an empire built on clicks relearn the language of concrete and steel?</p>
                     <img src="img/act6_ch10_cog_hybrid.jpg" alt="Hand placing cog into machine/smartphone hybrid" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act6_ch10_cog_hybrid.jpg'; this.src='https://placehold.co/600x350/1c1c3a/ff0000?text=Error:+act6_ch10_cog_hybrid.jpg+NOT+FOUND'; this.onerror=null;">
                 </div>
 
-                <div class="chapter animate-on-scroll" data-animation="slideInRight" data-delay="300">
-                    <h3>Chapter 11: TikTok’s Test of Sovereignty</h3>
+                <div class="stage-part animate-on-scroll" data-animation="slideInRight" data-delay="300">
+                    <h3>Part 11: TikTok’s Test of Sovereignty</h3>
                     <p>An app, a global phenomenon, becomes a geopolitical stress test. Montana's ban attempt. The EU's Digital Services Act. These are not just skirmishes over data privacy; they are profound questions about sovereignty in a digital age. Can a nation-state truly regulate an algorithm that knows its citizens better than their own government? Could we, as a society, ever choose to restrict the infinite scroll, much like we once restricted lead paint or asbestos, recognizing its pervasive, if subtle, harm?</p>
                     <div class="interactive-placeholder" id="reader-poll-tiktok">
                         <h4>Reader Poll: Regulate the Scroll?</h4>
@@ -246,8 +247,8 @@
                     </div>
                 </div>
 
-                <div class="chapter animate-on-scroll" data-animation="fadeInUp" data-delay="400">
-                    <h3>Chapter 12: Screens at the End of the World (And a Glimmer Beyond)</h3>
+                <div class="stage-part animate-on-scroll" data-animation="fadeInUp" data-delay="400">
+                    <h3>Part 12: Screens at the End of the World (And a Glimmer Beyond)</h3>
                     <p>Two years later. The same friends, perhaps, in that Brooklyn apartment. Older. Wiser? The S&P might be at 7000, or 3000. The Nero GIF might still make its rounds. But perhaps, a new conversation is emerging. A realization that attention, like any precious resource, can be consciously directed. Towards local maker-spaces instead of global marketplaces. Towards citizen assemblies instead of comment-section wars. Towards dog-eared books instead of doom-scrolling feeds.</p>
                      <img src="img/epilogue_ch12_looking_up.jpg" alt="Person looking up from screen towards hope" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/epilogue_ch12_looking_up.jpg'; this.src='https://placehold.co/700x400/1c1c3a/ff0000?text=Error:+epilogue_ch12_looking_up.jpg+NOT+FOUND'; this.onerror=null;">
                     <blockquote class="pull-quote-main animate-on-scroll" data-animation="fadeIn" data-delay="200">
@@ -264,11 +265,11 @@
                             </div>
                     </div>
                 </div>
-                 <div class="chapter animate-on-scroll" data-animation="fadeInUp" data-delay="500">
+                 <div class="stage-part animate-on-scroll" data-animation="fadeInUp" data-delay="500">
                     <h3>Project Manifesto & Credits</h3>
                     <p>This interactive narrative is an exploration of the themes presented in "Empire of Likes," designed to provoke thought and encourage a deeper engagement with the forces shaping our digital and physical worlds.</p>
                     <p><strong>Concept & Narrative:</strong> Based on "Empire of Likes" (Version 0.9) by John Doe (Example Author).</p>
-                    <p><strong>Interactive Design & Development:</strong> AI-assisted generation & human curation. <span class="highlight-text">Version 3.0</span></p>
+                    <p><strong>Interactive Design & Development:</strong> AI-assisted generation & human curation. <span class="highlight-text">Version 4.0 Narrative Rework</span></p>
                  </div>
             </div>
         </section>
