--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
     </header>
 
     <main id="main-content">
-        <section id="stage1" class="content-section active-section">
-            <div class="section-background-fx" data-bg-type="prologue-stars"></div>
+        <section id="stage1" class="content-section"> <div class="section-background-fx" data-bg-type="prologue-stars"></div>
             <div class="container">
                 <h2 class="section-title animate-on-scroll" data-animation="fadeInUp">Stage 1: The <span class="highlight-text">Great Rupture</span></h2>
                 <p class="stage-intro animate-on-scroll" data-animation="fadeInUp" data-delay="100">
@@ -70,7 +69,7 @@
                     <p class="thesis animate-text-reveal">
                         <em>When a civilisation’s prime export becomes <strong class="highlight-text">attention</strong>, decadence ceases to be a moral failing and becomes the P&L strategy.</em>
                     </p>
-                    <blockquote class="pull-quote-main">
+                    <blockquote class="pull-quote-main animate-on-scroll" data-animation="fadeIn" data-delay="250">
                         <p>“Rome paid its soldiers in <span class="highlight-secondary">silver</span>; we pay ours in <span class="highlight-secondary">followers</span>.”</p>
                     </blockquote>
                 </div>
@@ -78,7 +77,7 @@
                 <div class="stage-part animate-on-scroll" data-animation="slideInLeft" data-delay="300">
                     <h3>Part 1: Group-Chat Apocalypse</h3>
                     <p>The old gods of the market tremble. In Brooklyn apartments, illuminated by the cold light of stock tickers bleeding red, a new kind of augury unfolds – not in the entrails of beasts, but in the endless scroll of group chats. Here, wit, despair, and the perfectly timed GIF become the currency of a dawning unease.</p>
-                    <img src="img/act1_ch1_group_chat_cracked.jpg" alt="Group chat on a cracked screen" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act1_ch1_group_chat_cracked.jpg'; this.src='https://placehold.co/700x300/1a1a1a/E0E0FF?text=Error:+act1_ch1_group_chat_cracked.jpg+not+found'; this.onerror=null;">
+                    <img src="img/act1_ch1_group_chat_cracked.jpg" alt="Group chat on a cracked screen" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="350" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act1_ch1_group_chat_cracked.jpg'; this.src='https://placehold.co/700x300/1a1a1a/E0E0FF?text=Error:+act1_ch1_group_chat_cracked.jpg+not+found'; this.onerror=null;">
                     <div class="interactive-placeholder" id="group-chat-interactive">
                         <h4>Interactive: The iMessage Thread</h4>
                         <div class="chat-message-container"></div>
@@ -119,8 +118,8 @@
                 <div class="stage-part animate-on-scroll" data-animation="fadeInUp" data-delay="200">
                     <h3>Part 3: Invention of the Infinite Scroll</h3>
                     <p>It began innocuously enough. Aza Raskin, a young interface designer, sought to remove a click, to make the digital river flow a little smoother. In 2006, the infinite scroll was born. Little did we know, we were forging the digital equivalent of the Vegas slot machine – a perfectly calibrated dopamine drip, designed never to end. Can you escape its pull?</p>
-                    <img src="img/act2_ch3_scroll_slot_machine.jpg" alt="Slot machine morphing into infinite scroll" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act2_ch3_scroll_slot_machine.jpg'; this.src='https://placehold.co/700x350/1c1c3a/ff0000?text=Error:+act2_ch3_scroll_slot_machine.jpg+NOT+FOUND'; this.onerror=null;">
-                    <aside class="infobox animate-on-scroll" data-animation="fadeIn" data-delay="150">
+                    <img src="img/act2_ch3_scroll_slot_machine.jpg" alt="Slot machine morphing into infinite scroll" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="250" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act2_ch3_scroll_slot_machine.jpg'; this.src='https://placehold.co/700x350/1c1c3a/ff0000?text=Error:+act2_ch3_scroll_slot_machine.jpg+NOT+FOUND'; this.onerror=null;">
+                    <aside class="infobox animate-on-scroll" data-animation="fadeIn" data-delay="300">
                         <h4><span class="tone-tag">[INFOBOX]</span> Five UX patterns that hack the limbic system.</h4>
                         <ol>
                             <li>Infinite Scroll: The never-ending story.</li>
@@ -140,7 +139,7 @@
                     </div>
                 </div>
 
-                <div class="stage-part animate-on-scroll" data-animation="fadeInUp" data-delay="300">
+                <div class="stage-part animate-on-scroll" data-animation="fadeInUp" data-delay="350">
                     <h3>Part 4: When Talent Quit, Influence Won</h3>
                     <p>There was a time when fame was tethered, however loosely, to demonstrable skill. Sinatra's voice, DiMaggio's swing. But the engine of attention grinds differently. It rewards not necessarily talent, but the ability to *capture* talent's shimmering byproduct: eyeballs. Explore the data: when did "scandal" searches eclipse "skill"? Why does a 13-year-old Roblox streamer earn more than 95% of working musicians?</p>
                     <div class="interactive-placeholder" id="fame-trends-chart">
@@ -177,7 +176,7 @@
                 <div class="stage-part animate-on-scroll" data-animation="slideInUp" data-delay="300">
                     <h3>Part 6: Credit Cards, Forever Wars, & Invisible Ink</h3>
                     <p>An empire that no longer primarily *makes* things must find other ways to fuel its appetites. Enter the era of easy credit – BankAmericard becoming Visa, a world mortgaged on future earnings. Simultaneously, the nature of conflict shifted. "Cost-plus" contracts turned defense into a perpetual R&D arm of the economy, funding wars fought in shadows, their true costs written in invisible ink on the national ledger. How does debt, personal and national, intertwine with a culture of disposable attention?</p>
-                    <img src="img/act3_ch6_card_drone_morph.jpg" alt="Credit card morphing into military drone" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act3_ch6_card_drone_morph.jpg'; this.src='https://placehold.co/700x300/1c1c3a/ff0000?text=Error:+act3_ch6_card_drone_morph.jpg+NOT+FOUND'; this.onerror=null;">
+                    <img src="img/act3_ch6_card_drone_morph.jpg" alt="Credit card morphing into military drone" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="350" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act3_ch6_card_drone_morph.jpg'; this.src='https://placehold.co/700x300/1c1c3a/ff0000?text=Error:+act3_ch6_card_drone_morph.jpg+NOT+FOUND'; this.onerror=null;">
                     <div class="interactive-placeholder" id="debt-gdp-chart">
                         <h4>Data Viz: Debt to GDP – The Unseen Burden</h4>
                         <img src="img/act3_ch6_debt_gdp_illustrative.jpg" alt="Debt to GDP Chart Placeholder" class="chart-placeholder-image" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act3_ch6_debt_gdp_illustrative.jpg'; this.src='https://placehold.co/600x350/1c1c3a/ff0000?text=Error:+act3_ch6_debt_gdp_illustrative.jpg+NOT+FOUND'; this.onerror=null;">
@@ -188,7 +187,7 @@
                 <div class="stage-part animate-on-scroll" data-animation="fadeIn" data-delay="400">
                     <h3>Part 7: Who Gets Crushed First (The Unseen Toll)</h3>
                     <p>The circuses of the attention empire aren't free. Someone always pays. The Rust Belt hollowed out, subprime mortgages preying on dreams, algorithmic bias invisibly shaping destinies. Consider the data: teens of color often log significantly more screen hours than their wealthier white peers. Is this a choice, or a consequence of a system that offers distraction as a primary commodity, especially to those with fewer alternatives? This is the moral reckoning: who bears the hidden weight of our digital Colosseum?</p>
-                    <img src="img/act5_ch9_factory_smartphone_split.jpg" alt="Decaying factory vs glowing smartphone" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act5_ch9_factory_smartphone_split.jpg'; this.src='https://placehold.co/700x400/1c1c3a/ff0000?text=Error:+act5_ch9_factory_smartphone_split.jpg+NOT+FOUND'; this.onerror=null;">
+                    <img src="img/act5_ch9_factory_smartphone_split.jpg" alt="Decaying factory vs glowing smartphone" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="450" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act5_ch9_factory_smartphone_split.jpg'; this.src='https://placehold.co/700x400/1c1c3a/ff0000?text=Error:+act5_ch9_factory_smartphone_split.jpg+NOT+FOUND'; this.onerror=null;">
                 </div>
             </div>
         </section>
@@ -204,7 +203,7 @@
                 <div class="stage-part animate-on-scroll" data-animation="zoomIn" data-delay="200">
                     <h3>Part 8: 2007: The Sensation That Built an Empire</h3>
                     <p>A single tape. A calculated leak, or a serendipitous scandal? Regardless, it became the spark. Follow the trajectory: from whispered notoriety to an E! pilot, then a multi-billion-dollar branding dynasty. This is attention arbitrage perfected – the art of converting raw, often scandalous, human focus into enduring commercial power. How many clicks to build an empire?</p>
-                    <img src="img/act4_ch7_statue_selfie.jpg" alt="Classical statue taking a selfie" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act4_ch7_statue_selfie.jpg'; this.src='https://placehold.co/600x400/1c1c3a/ff0000?text=Error:+act4_ch7_statue_selfie.jpg+NOT+FOUND'; this.onerror=null;">
+                    <img src="img/act4_ch7_statue_selfie.jpg" alt="Classical statue taking a selfie" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="250" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act4_ch7_statue_selfie.jpg'; this.src='https://placehold.co/600x400/1c1c3a/ff0000?text=Error:+act4_ch7_statue_selfie.jpg+NOT+FOUND'; this.onerror=null;">
                 </div>
 
                 <div class="stage-part animate-on-scroll" data-animation="zoomIn" data-delay="300">
@@ -225,7 +224,7 @@
                 <div class="stage-part animate-on-scroll" data-animation="slideInLeft" data-delay="200">
                     <h3>Part 10: The Great Re-Industrialization Mirage?</h3>
                     <p>Whispers of a return. The CHIPS Act. Green steel. Micro-factories. A yearning for the tangible, for a future built again with hands and ingenuity. But is it a genuine renaissance, or a nostalgic mirage in the digital desert? The resistance is formidable: the siren call of cheaper production elsewhere, the NIMBYism that blocks new forges, the short political cycles that favor quick likes over long-term investment. Can an empire built on clicks relearn the language of concrete and steel?</p>
-                    <img src="img/act6_ch10_cog_hybrid.jpg" alt="Hand placing cog into machine/smartphone hybrid" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act6_ch10_cog_hybrid.jpg'; this.src='https://placehold.co/600x350/1c1c3a/ff0000?text=Error:+act6_ch10_cog_hybrid.jpg+NOT+FOUND'; this.onerror=null;">
+                    <img src="img/act6_ch10_cog_hybrid.jpg" alt="Hand placing cog into machine/smartphone hybrid" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="250" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/act6_ch10_cog_hybrid.jpg'; this.src='https://placehold.co/600x350/1c1c3a/ff0000?text=Error:+act6_ch10_cog_hybrid.jpg+NOT+FOUND'; this.onerror=null;">
                 </div>
 
                 <div class="stage-part animate-on-scroll" data-animation="slideInRight" data-delay="300">
@@ -250,8 +249,8 @@
                 <div class="stage-part animate-on-scroll" data-animation="fadeInUp" data-delay="400">
                     <h3>Part 12: Screens at the End of the World (And a Glimmer Beyond)</h3>
                     <p>Two years later. The same friends, perhaps, in that Brooklyn apartment. Older. Wiser? The S&P might be at 7000, or 3000. The Nero GIF might still make its rounds. But perhaps, a new conversation is emerging. A realization that attention, like any precious resource, can be consciously directed. Towards local maker-spaces instead of global marketplaces. Towards citizen assemblies instead of comment-section wars. Towards dog-eared books instead of doom-scrolling feeds.</p>
-                     <img src="img/epilogue_ch12_looking_up.jpg" alt="Person looking up from screen towards hope" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="100" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/epilogue_ch12_looking_up.jpg'; this.src='https://placehold.co/700x400/1c1c3a/ff0000?text=Error:+epilogue_ch12_looking_up.jpg+NOT+FOUND'; this.onerror=null;">
-                    <blockquote class="pull-quote-main animate-on-scroll" data-animation="fadeIn" data-delay="200">
+                     <img src="img/epilogue_ch12_looking_up.jpg" alt="Person looking up from screen towards hope" class="chapter-image animate-on-scroll" data-animation="fadeIn" data-delay="450" onerror="this.alt='IMAGE LOAD ERROR. Check path: img/epilogue_ch12_looking_up.jpg'; this.src='https://placehold.co/700x400/1c1c3a/ff0000?text=Error:+epilogue_ch12_looking_up.jpg+NOT+FOUND'; this.onerror=null;">
+                    <blockquote class="pull-quote-main animate-on-scroll" data-animation="fadeIn" data-delay="500">
                         <p class="animate-text-reveal"><em>“Rome gave us law; Hollywood gave us hero shots; maybe our kids will give us something <span class="highlight-secondary">better</span>—if we can teach them to <span class="highlight-secondary">look up</span> from the screen long enough to <span class="highlight-secondary">build it</span>.”</em></p>
                     </blockquote>
                     <div class="interactive-placeholder" id="constellation-of-hope">
@@ -261,11 +260,10 @@
                             <input type="text" id="hope-input" maxlength="70" placeholder="e.g., 'Reading a physical book,' 'Volunteering locally,' 'Learning a craft'">
                             <button id="submit-hope-btn" class="btn btn-primary">Add to Our Stars</button>
                         </div>
-                        <div id="hope-display-area" class="star-field">
-                            </div>
+                        <div id="hope-display-area" class="star-field"></div>
                     </div>
                 </div>
-                 <div class="stage-part animate-on-scroll" data-animation="fadeInUp" data-delay="500">
+                 <div class="stage-part animate-on-scroll" data-animation="fadeInUp" data-delay="550">
                     <h3>Project Manifesto & Credits</h3>
                     <p>This interactive narrative is an exploration of the themes presented in "Empire of Likes," designed to provoke thought and encourage a deeper engagement with the forces shaping our digital and physical worlds.</p>
                     <p><strong>Concept & Narrative:</strong> Based on "Empire of Likes" (Version 0.9) by John Doe (Example Author).</p>
